--- a/Transduction.html
+++ b/Transduction.html
@@ -20,7 +20,7 @@ img {
 <body>
 	<div>
 	<figure>
-	<a href="file:///Users/brendanreynoldsstoianov/Desktop/ARTS%20530/Website_development/3D_works.html">
+	<a href="https://brainybrendan25.github.io/3D_works/" title="3d Works">
 	<img src="https://cdn.myportfolio.com/bd33f49c-87c8-4d90-aa56-be8c32b4f43f/3c95c074-fe2a-4ecd-8435-ab25d4a37ef1_rw_3840.jpg?h=2998c66bee3177dca5186cd944befa14" alt="Transduction" style="width:1000px;height:900px">
 	</a>
 	<div class="center">
